<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="DNS">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_sniffing_enabled"
            android:summary="@string/summary_pref_sniffing_enabled"
            android:title="@string/title_pref_sniffing_enabled" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_route_only_enabled"
            android:summary="@string/summary_pref_route_only_enabled"
            android:title="@string/title_pref_route_only_enabled" />

        <EditTextPreference
            android:key="pref_remote_dns"
            android:summary="@string/summary_pref_remote_dns"
            android:title="@string/title_pref_remote_dns" />

        <EditTextPreference
            android:key="pref_domestic_dns"
            android:summary="@string/summary_pref_domestic_dns"
            android:title="@string/title_pref_domestic_dns" />

        <EditTextPreference
            android:key="pref_dns_hosts"
            android:summary="@string/summary_pref_dns_hosts"
            android:title="@string/title_pref_dns_hosts" />

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/outbound_domain_resolve_method"
            android:entryValues="@array/outbound_domain_resolve_method_value"
            android:key="pref_outbound_domain_resolve_method"
            android:summary="%s"
            android:title="@string/title_outbound_domain_resolve_method" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_mux_settings">
        <CheckBoxPreference
            android:key="pref_mux_enabled"
            android:summary="@string/summary_pref_mux_enabled"
            android:title="@string/title_pref_mux_enabled" />

        <EditTextPreference
            android:inputType="number"
            android:key="pref_mux_concurrency"
            android:summary="8"
            android:title="@string/title_pref_mux_concurency" />

        <EditTextPreference
            android:inputType="number"
            android:key="pref_mux_xudp_concurrency"
            android:summary="8"
            android:title="@string/title_pref_mux_xudp_concurency" />

        <ListPreference
            android:defaultValue="reject"
            android:entries="@array/mux_xudp_quic_entries"
            android:entryValues="@array/mux_xudp_quic_value"
            android:key="pref_mux_xudp_quic"
            android:summary="%s"
            android:title="@string/title_pref_mux_xudp_quic" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_fragment_settings">
        <CheckBoxPreference
            android:key="pref_fragment_enabled"
            android:title="@string/title_pref_fragment_enabled" />

        <EditTextPreference
            android:key="pref_fragment_length"
            android:summary="50-100"
            android:title="@string/title_pref_fragment_length" />

        <EditTextPreference
            android:key="pref_fragment_interval"
            android:summary="10-20"
            android:title="@string/title_pref_fragment_interval" />

        <ListPreference
            android:defaultValue="tlshello"
            android:entries="@array/fragment_packets"
            android:entryValues="@array/fragment_packets"
            android:key="pref_fragment_packets"
            android:summary="%s"
            android:title="@string/title_pref_fragment_packets" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Другие параметры">
        <ListPreference
            android:defaultValue="warning"
            android:entries="@array/core_loglevel"
            android:entryValues="@array/core_loglevel"
            android:key="pref_core_loglevel"
            android:summary="%s"
            android:title="@string/title_core_loglevel" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_allow_insecure"
            android:summary="@string/summary_pref_allow_insecure"
            android:title="@string/title_pref_allow_insecure" />
    </PreferenceCategory>

</PreferenceScreen>