<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <!-- Apenas o botão de adicionar (+) foi mantido para base clean tipo DTunnel -->
    <item
        android:icon="@drawable/ic_add_24dp"
        android:title="@string/menu_item_add_config"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/import_qrcode"
                android:title="@string/menu_item_import_config_qrcode"
                app:showAsAction="never" />
            <item
                android:id="@+id/import_clipboard"
                android:title="@string/menu_item_import_config_clipboard"
                app:showAsAction="never" />
            <item
                android:id="@+id/import_local"
                android:title="@string/menu_item_import_config_local"
                app:showAsAction="never" />
            <item
                android:id="@+id/import_manually_policy_group"
                android:title="@string/menu_item_import_config_policy_group"
                app:showAsAction="never" />
            <item
                android:id="@+id/import_manually_vmess"
                android:title="@string/menu_item_import_config_manually_vmess"
                app:showAsAction="never" />
            <item
                android:id="@+id/import_manually_vless"
                android:title="@string/menu_item_import_config_manually_vless"
                app:showAsAction="never" />
            <item
                android:id="@+id/import_manually_ss"
                android:title="@string/menu_item_import_config_manually_ss"
                app:showAsAction="never" />
            <item
                android:id="@+id/import_manually_socks"
                android:title="@string/menu_item_import_config_manually_socks"
                app:showAsAction="never" />
            <item
                android:id="@+id/import_manually_http"
                android:title="@string/menu_item_import_config_manually_http"
                app:showAsAction="never" />
            <item
                android:id="@+id/import_manually_trojan"
                android:title="@string/menu_item_import_config_manually_trojan"
                app:showAsAction="never" />
            <item
                android:id="@+id/import_manually_wireguard"
                android:title="@string/menu_item_import_config_manually_wireguard"
                app:showAsAction="never" />
            <item
                android:id="@+id/import_manually_hysteria2"
                android:title="@string/menu_item_import_config_manually_hysteria2"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>
