<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:fragment="com.v2ray.ang.ui.SettingsActivity$UISettingsFragment"
        android:icon="@drawable/ic_settings_24dp"
        android:title="@string/title_ui_settings" />

    <Preference
        android:fragment="com.v2ray.ang.ui.SettingsActivity$VPNSettingsFragment"
        android:icon="@drawable/ic_per_apps_24dp"
        android:title="@string/title_vpn_settings" />

    <Preference
        android:fragment="com.v2ray.ang.ui.SettingsActivity$CoreSettingsFragment"
        android:icon="@drawable/ic_routing_24dp"
        android:title="@string/title_core_settings" />

    <Preference
        android:fragment="com.v2ray.ang.ui.SettingsActivity$SubscriptionSettingsFragment"
        android:icon="@drawable/ic_subscriptions_24dp"
        android:title="@string/title_pref_subscription_settings" />

    <Preference
        android:fragment="com.v2ray.ang.ui.SettingsActivity$AdvancedSettingsFragment"
        android:icon="@drawable/ic_restore_24dp"
        android:title="@string/title_advanced" />

</PreferenceScreen>